feat: 유저 연동(#42)